--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
     "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.11.1",
+    "install": "^0.13.0",
+    "npm": "^10.6.0",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-pie-chart": "^3.0.2",
+    "react-native-reanimated": "^3.9.0",
+    "react-native-svg": "^15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
